--- a/src/main/resources/windows/chooseItemsWindow.fxml
+++ b/src/main/resources/windows/chooseItemsWindow.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -13,17 +15,20 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ChooseItemsController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="@stylesheets/style.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ChooseItemsController">
     <top>
         <HBox prefHeight="58.0" prefWidth="900.0" style="-fx-background-color: #212121;" BorderPane.alignment="CENTER">
             <children>
-            <ImageView onMouseClicked="#handleBackAction" fitHeight="40.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+            <ImageView fitHeight="40.0" fitWidth="50.0" onMouseClicked="#handleBackAction" pickOnBounds="true" preserveRatio="true" rotate="180.0">
                <image>
                   <Image url="@assets/left_arrow.png" />
                </image>
                <HBox.margin>
                   <Insets left="10.0" top="10.0" />
                </HBox.margin>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
             </ImageView>
                 <Label fx:id="tableLabel" alignment="CENTER_RIGHT" prefHeight="58.0" prefWidth="859.0" text="TABLE 4" textFill="WHITE">
                     <HBox.margin>
@@ -46,14 +51,13 @@
         <Pane prefHeight="542.0" prefWidth="900.0" style="-fx-background-color: #212121;" BorderPane.alignment="CENTER">
          <children>
             <Line endX="162.0" layoutX="722.0" layoutY="2.0" startX="-705.0" stroke="WHITE" strokeWidth="2.0" />
-            <HBox layoutX="622.0" layoutY="363.0" prefHeight="53.0" prefWidth="263.0" />
-            <VBox layoutX="16.0" layoutY="27.0" prefHeight="473.0" prefWidth="216.0">
+            <VBox fx:id="categoryGroup" layoutX="16.0" layoutY="27.0" prefHeight="473.0" prefWidth="216.0">
                <children>
-                  <Button alignment="TOP_LEFT" mnemonicParsing="false" prefHeight="62.0" prefWidth="195.0" style="-fx-background-color: #565656;" text="Drinks" textFill="WHITE">
+                  <Button fx:id="drinks" alignment="TOP_LEFT" mnemonicParsing="false" onMouseClicked="#handleMenuItemsDrinks" prefHeight="62.0" prefWidth="195.0" style="-fx-background-color: #333333 #333333;" styleClass="btn-category" text="Drinks" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="50.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@assets/cat1.png" />
+                              <Image url="@assets/7.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -63,12 +67,15 @@
                      <VBox.margin>
                         <Insets bottom="10.0" />
                      </VBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
-                  <Button alignment="TOP_LEFT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="195.0" style="-fx-background-color: #333333;" text="Main courses" textFill="WHITE">
+                  <Button fx:id="mainCourse" alignment="TOP_LEFT" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#handleMenuItemsMainCourse" prefHeight="62.0" prefWidth="195.0" style="-fx-background-color: #333333;" styleClass="btn-category" text="Main courses" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="50.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@assets/cat3.png" />
+                              <Image url="@assets/2.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -78,103 +85,117 @@
                      <VBox.margin>
                         <Insets bottom="10.0" />
                      </VBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
-                  <Button alignment="TOP_LEFT" layoutX="10.0" layoutY="72.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="195.0" style="-fx-background-color: #333333;" text="Desserts" textFill="WHITE">
+                  <Button fx:id="soups" alignment="TOP_LEFT" layoutX="10.0" layoutY="72.0" mnemonicParsing="false" onMouseClicked="#handleMenuItemsSoups" prefHeight="62.0" prefWidth="195.0" style="-fx-background-color: #333333;" styleClass="btn-category" text="Soups" textFill="WHITE">
                      <graphic>
                         <ImageView fitHeight="50.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@assets/cat4.png" />
+                              <Image url="@assets/0.png" />
                            </image>
                         </ImageView>
                      </graphic>
                      <font>
                         <Font size="18.0" />
                      </font>
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="desserts" alignment="TOP_LEFT" layoutX="10.0" layoutY="160.0" mnemonicParsing="false" onMouseClicked="#handleMenuItemsDesserts" prefHeight="39.0" prefWidth="196.0" style="-fx-background-color: #333333;" styleClass="btn-category" text="Desserts" textFill="WHITE">
+                     <graphic>
+                        <ImageView fitHeight="50.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@assets/3.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="pasta" alignment="TOP_LEFT" layoutX="10.0" layoutY="226.0" mnemonicParsing="false" onMouseClicked="#handleMenuItemsPasta" prefHeight="39.0" prefWidth="196.0" style="-fx-background-color: #333333;" styleClass="btn-category" text="Pasta" textFill="WHITE">
+                     <graphic>
+                        <ImageView fitHeight="50.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@assets/5.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="pizza" alignment="TOP_LEFT" layoutX="10.0" layoutY="298.0" mnemonicParsing="false" onMouseClicked="#handleMenuItemsPizza" prefHeight="39.0" prefWidth="196.0" style="-fx-background-color: #333333;" styleClass="btn-category" text="Pizza" textFill="WHITE">
+                     <graphic>
+                        <ImageView fitHeight="50.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@assets/6.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </Button>
+                  <Button fx:id="sideDishes" alignment="TOP_LEFT" layoutX="10.0" layoutY="370.0" mnemonicParsing="false" onMouseClicked="#handleMenuItemsSideDish" prefHeight="39.0" prefWidth="196.0" style="-fx-background-color: #333333;" styleClass="btn-category" text="Side dish" textFill="WHITE">
+                     <graphic>
+                        <ImageView fitHeight="50.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@assets/4.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
                   </Button>
                </children>
             </VBox>
             <Line endX="-475.0" endY="510.0" layoutX="732.0" layoutY="17.0" startX="-475.0" stroke="WHITE" strokeWidth="2.0" />
-            <FlowPane layoutX="276.0" layoutY="24.0" prefHeight="468.0" prefWidth="601.0">
-               <children>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="180.0" style="-fx-background-color: #333333;" text="Coke" textFill="WHITE">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                     <FlowPane.margin>
-                        <Insets bottom="20.0" right="20.0" />
-                     </FlowPane.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="180.0" style="-fx-background-color: #333333;" text="Pepsi" textFill="WHITE">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                     <FlowPane.margin>
-                        <Insets bottom="20.0" right="20.0" />
-                     </FlowPane.margin>
-                  </Button>
-                  <Button mnemonicParsing="false" prefHeight="100.0" prefWidth="180.0" style="-fx-background-color: #333333;" text="Iced tea" textFill="WHITE">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                     <FlowPane.margin>
-                        <Insets bottom="20.0" right="20.0" />
-                     </FlowPane.margin>
-                  </Button>
-                  <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="180.0" style="-fx-background-color: #333333;" text="Tea" textFill="WHITE">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                     <FlowPane.margin>
-                        <Insets bottom="20.0" right="20.0" />
-                     </FlowPane.margin>
-                  </Button>
-                  <Button layoutX="194.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="180.0" style="-fx-background-color: #333333;" text="Lemonade" textFill="WHITE">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                     <FlowPane.margin>
-                        <Insets bottom="20.0" right="20.0" />
-                     </FlowPane.margin>
-                  </Button>
-                  <Button layoutX="378.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="180.0" style="-fx-background-color: #333333;" text="Red wine" textFill="WHITE">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                     <FlowPane.margin>
-                        <Insets bottom="20.0" right="20.0" />
-                     </FlowPane.margin>
-                  </Button>
-                  <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="180.0" style="-fx-background-color: #333333;" text="White wine" textFill="WHITE">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                     <FlowPane.margin>
-                        <Insets bottom="20.0" right="20.0" />
-                     </FlowPane.margin>
-                  </Button>
-                  <Button layoutX="194.0" layoutY="130.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="180.0" style="-fx-background-color: #333333;" text="Cosmopolitan" textFill="WHITE">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                     <FlowPane.margin>
-                        <Insets bottom="20.0" right="20.0" />
-                     </FlowPane.margin>
-                  </Button>
-                  <Button layoutX="378.0" layoutY="130.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="180.0" style="-fx-background-color: #333333;" text="Mojito" textFill="WHITE">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                     <FlowPane.margin>
-                        <Insets bottom="20.0" right="20.0" />
-                     </FlowPane.margin>
-                  </Button>
-                  <Button layoutX="410.0" layoutY="260.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="180.0" style="-fx-background-color: #333333;" text="Beer" textFill="WHITE">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                  </Button>
-               </children>
-            </FlowPane>
+            <ScrollPane layoutX="276.0" layoutY="24.0">
+               <content>
+                  <FlowPane fx:id="flowPane" prefHeight="468.0" prefWidth="601.0" style="-fx-background-color: #212121 #212121;" />
+               </content>
+            </ScrollPane>
             <Label layoutX="276.0" layoutY="500.0" text="*Double click to add an item" textFill="WHITE" />
          </children>
         </Pane>
