--- a/src/main/resources/windows/popUpWindow.fxml
+++ b/src/main/resources/windows/popUpWindow.fxml
@@ -1,25 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<!--<?xml version="1.0" encoding="UTF-8"?>-->
-<!--<?import java.lang.*?>-->
-<!--<?import java.util.*?>-->
-<!--<?import javafx.scene.*?>-->
-<!--<?import javafx.scene.control.*?>-->
-<!--<?import javafx.scene.layout.*?>-->
-<!--<AnchorPane xmlns="http://javafx.com/javafx"-->
-<!--xmlns:fx="http://javafx.com/fxml"-->
-<!--fx:controller="windows.PopUpWindow"-->
-<!--prefHeight="400.0" prefWidth="600.0">-->
-<!--</AnchorPane>-->
-
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #333333; -fx-border-color: #e1901e; -fx-border-width: 5;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PopUpController">
 <children>
     <HBox alignment="CENTER" prefHeight="40.0" prefWidth="372.0" style="-fx-background-color: #000;">
