--- a/src/main/resources/windows/cashRegisterWindow.fxml
+++ b/src/main/resources/windows/cashRegisterWindow.fxml
@@ -13,11 +13,11 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.Controller">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CashRegisterController">
     <top>
         <HBox prefHeight="58.0" prefWidth="900.0" style="-fx-background-color: #212121;" BorderPane.alignment="CENTER">
             <children>
-            <ImageView fitHeight="40.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" rotate="180.0">
+            <ImageView fitHeight="40.0" fitWidth="50.0" onMouseClicked="#handleBackAction" pickOnBounds="true" preserveRatio="true" rotate="180.0">
                <image>
                   <Image url="@assets/left_arrow.png" />
                </image>
@@ -54,7 +54,7 @@
                               <Font size="30.0" />
                            </font>
                         </Label>
-                        <Label alignment="CENTER_RIGHT" prefHeight="53.0" prefWidth="406.0" text="10" textFill="WHITE">
+                        <Label fx:id="initialStateLabel" alignment="CENTER_RIGHT" prefHeight="53.0" prefWidth="406.0" text="10" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="30.0" />
                            </font>
@@ -76,7 +76,7 @@
                               <Font size="30.0" />
                            </font>
                         </Label>
-                        <Label alignment="CENTER_RIGHT" prefHeight="53.0" prefWidth="406.0" text="19" textFill="WHITE">
+                        <Label fx:id="currentStateLabel" alignment="CENTER_RIGHT" prefHeight="53.0" prefWidth="406.0" text="19" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="30.0" />
                            </font>
@@ -98,7 +98,7 @@
                               <Font size="36.0" />
                            </font>
                         </Label>
-                        <Label alignment="CENTER_RIGHT" prefHeight="53.0" prefWidth="406.0" text="9" textFill="#ff6730">
+                        <Label fx:id="profitLabel" alignment="CENTER_RIGHT" prefHeight="53.0" prefWidth="406.0" text="9" textFill="#ff6730">
                            <font>
                               <Font name="System Bold" size="36.0" />
                            </font>
@@ -118,7 +118,7 @@
             <Line endX="162.0" layoutX="722.0" layoutY="2.0" startX="-701.0" stroke="WHITE" strokeWidth="2.0" />
             <HBox alignment="CENTER_RIGHT" layoutX="20.0" layoutY="243.0" prefHeight="100.0" prefWidth="544.0" style="-fx-background-color: #333333;">
                <children>
-                  <TextField alignment="CENTER_RIGHT" prefHeight="57.0" prefWidth="153.0" promptText="0">
+                  <TextField fx:id="initStateInput" alignment="CENTER_RIGHT" prefHeight="57.0" prefWidth="153.0" promptText="0">
                      <HBox.margin>
                         <Insets right="20.0" />
                      </HBox.margin>
@@ -126,7 +126,7 @@
                         <Font size="24.0" />
                      </font>
                   </TextField>
-                  <Button mnemonicParsing="false" prefHeight="57.0" prefWidth="216.0" style="-fx-background-color: #288e28;" text="Set new initial state" textFill="WHITE">
+                  <Button mnemonicParsing="false" onMouseClicked="#setNewInitialState" prefHeight="57.0" prefWidth="216.0" style="-fx-background-color: #288e28;" text="Set new initial state" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
