--- a/src/main/resources/windows/mainWindow.fxml
+++ b/src/main/resources/windows/mainWindow.fxml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.Group?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.shape.Circle?>
-<?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
-
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainWindowController">
    <top>
       <HBox alignment="CENTER" prefHeight="123.0" prefWidth="1280.0" style="-fx-background-color: #212121;" BorderPane.alignment="CENTER_LEFT">
@@ -141,7 +136,8 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <Button fx:id="myButton" mnemonicParsing="false" prefHeight="48.0" prefWidth="162.0" style="-fx-background-color: #7f7f7f;" text="Cash register" textFill="WHITE">
+             <Button fx:id="myButton" mnemonicParsing="false" onMouseClicked="#openCashRegisterScreen" prefHeight="48.0"
+                     prefWidth="162.0" style="-fx-background-color: #7f7f7f;" text="Cash register" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
