--- a/src/main/resources/windows/chooseItemsWindow.fxml
+++ b/src/main/resources/windows/chooseItemsWindow.fxml
@@ -1,20 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.FlowPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Line?>
-<?import javafx.scene.text.Font?>
-
+<?import javafx.scene.text.*?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="@stylesheets/style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ChooseItemsController">
     <top>
         <HBox prefHeight="58.0" prefWidth="900.0" style="-fx-background-color: #212121;" BorderPane.alignment="CENTER">
@@ -196,7 +188,19 @@
                   <FlowPane fx:id="flowPane" prefHeight="468.0" prefWidth="601.0" style="-fx-background-color: #212121 #212121; -fx-border-width: 0;" />
                </content>
             </ScrollPane>
-            <Label layoutX="276.0" layoutY="500.0" text="*Click to add an item" textFill="WHITE" />
+            <Label layoutX="276.0" layoutY="502.0" text="*Click to add an item" textFill="WHITE"/>
+            <HBox alignment="CENTER_RIGHT" layoutX="502.0" layoutY="493.0" prefHeight="39.0" prefWidth="383.0">
+               <children>
+                  <CheckBox alignment="CENTER_RIGHT" mnemonicParsing="false" text="Half portion" textFill="WHITE"/>
+                  <Button fx:id="createNewItem" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#newItem"
+                          prefHeight="31.0" prefWidth="148.0" style="-fx-background-color: #288e28;"
+                          text="Create new item" textFill="WHITE">
+                     <HBox.margin>
+                        <Insets left="40.0"/>
+                     </HBox.margin>
+                  </Button>
+               </children>
+            </HBox>
          </children>
         </Pane>
    </center>
