--- a/src/main/resources/windows/popUpEditItemWindow.fxml
+++ b/src/main/resources/windows/popUpEditItemWindow.fxml
@@ -7,7 +7,7 @@
 <VBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity"
       minHeight="-Infinity" minWidth="-Infinity"
       style="-fx-background-color: #333333; -fx-border-color: #e1901e; -fx-border-width: 5;"
-      xmlns="http://javafx.com/javafx/8.0.171" fx:controller="controller.PopUpController">
+      xmlns="http://javafx.com/javafx/8.0.171" fx:controller="controller.PopUpEditItemController">
     <children>
         <HBox alignment="CENTER" prefHeight="40.0" prefWidth="372.0" style="-fx-background-color: #000;">
             <children>
@@ -64,6 +64,11 @@
                 <Insets bottom="8.0"/>
             </VBox.margin>
         </HBox>
+        <Label fx:id="editItemErrorMessage" textFill="#c90b0b">
+            <VBox.margin>
+                <Insets bottom="10.0"/>
+            </VBox.margin>
+        </Label>
         <HBox alignment="CENTER_LEFT">
             <children>
                 <Button fx:id="saveNewItemBtn" mnemonicParsing="false" onMouseClicked="#confirm" prefHeight="40.0"
