--- a/src/main/resources/windows/popUpNewItemWindow.fxml
+++ b/src/main/resources/windows/popUpNewItemWindow.fxml
@@ -7,7 +7,7 @@
 <VBox xmlns:fx="http://javafx.com/fxml/1" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity"
       minHeight="-Infinity" minWidth="-Infinity"
       style="-fx-background-color: #333333; -fx-border-color: #e1901e; -fx-border-width: 5;"
-      xmlns="http://javafx.com/javafx/8.0.171" fx:controller="controller.PopUpController">
+      xmlns="http://javafx.com/javafx/8.0.171" fx:controller="controller.PopUpNewItemController">
     <children>
         <HBox alignment="CENTER" prefHeight="40.0" prefWidth="372.0" style="-fx-background-color: #000;">
             <children>
@@ -49,7 +49,7 @@
                         <Insets/>
                     </HBox.margin>
                 </TextField>
-                <Label fx:id="outlay11" alignment="CENTER_RIGHT" prefHeight="21.0" prefWidth="2.0" text="€"
+                <Label fx:id="euroLabel" alignment="CENTER_RIGHT" prefHeight="21.0" prefWidth="2.0" text="€"
                        textFill="WHITE">
                     <font>
                         <Font name="System Bold" size="15.0"/>
@@ -66,15 +66,20 @@
         <HBox alignment="CENTER" prefHeight="21.0" prefWidth="249.0">
             <children>
                 <Label prefHeight="21.0" prefWidth="232.0" text="Category" textFill="WHITE"/>
-                <ChoiceBox fx:id="catgorySelect" prefHeight="31.0" prefWidth="207.0"/>
+                <ChoiceBox fx:id="categorySelect" prefHeight="31.0" prefWidth="207.0"/>
             </children>
             <VBox.margin>
                 <Insets bottom="10.0"/>
             </VBox.margin>
         </HBox>
+        <Label fx:id="newItemErrorMessage" textFill="#c90b0b">
+            <VBox.margin>
+                <Insets bottom="10.0"/>
+            </VBox.margin>
+        </Label>
         <HBox alignment="CENTER_LEFT">
             <children>
-                <Button fx:id="saveNewItemBtn" mnemonicParsing="false" onMouseClicked="#confirm" prefHeight="40.0"
+                <Button fx:id="saveNewItemBtn" mnemonicParsing="false" onMouseClicked="#saveNewItem" prefHeight="40.0"
                         prefWidth="100.0" style="-fx-background-color: #288e28;" text="Save">
                     <HBox.margin>
                         <Insets/>
@@ -82,7 +87,7 @@
                 </Button>
                 <Region HBox.hgrow="ALWAYS"/>
                 <Button fx:id="cancelNewItemBtn" alignment="CENTER" layoutX="102.0" layoutY="10.0"
-                        mnemonicParsing="false" onMouseClicked="#closeWindow" prefHeight="40.0" prefWidth="100.0"
+                        mnemonicParsing="false" onMouseClicked="#cancelNewItem" prefHeight="40.0" prefWidth="100.0"
                         style="-fx-background-color: #e1901e;" text="Cancel" textAlignment="CENTER">
                     <HBox.margin>
                         <Insets/>
