--- a/src/main/resources/windows/popUpEditItemWindow.fxml
+++ b/src/main/resources/windows/popUpEditItemWindow.fxml
@@ -71,13 +71,14 @@
         </Label>
         <HBox alignment="CENTER_LEFT">
             <children>
-                <Button fx:id="saveNewItemBtn" mnemonicParsing="false" onMouseClicked="#confirm" prefHeight="40.0"
+                <Button fx:id="saveEditItemBtn" mnemonicParsing="false" onMouseClicked="#saveEditedItem"
+                        prefHeight="40.0"
                         prefWidth="100.0" style="-fx-background-color: #288e28;" text="Save">
                     <HBox.margin>
                         <Insets/>
                     </HBox.margin>
                 </Button>
-                <Button fx:id="deleteItemBtn" mnemonicParsing="false" onMouseClicked="#confirm" prefHeight="40.0"
+                <Button fx:id="deleteItemBtn" mnemonicParsing="false" onMouseClicked="#deleteItem" prefHeight="40.0"
                         prefWidth="100.0" style="-fx-background-color: #9b1d20;" text="Delete">
                     <HBox.margin>
                         <Insets left="10.0"/>
